--- a/artists.html
+++ b/artists.html
@@ -39,17 +39,17 @@
                 ],
 
                 sad: [
-                    { name: "TV Girl", img: "public/tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "Dreamy indie pop with nostalgic, heart-touching melodies." },
+                    { name: "TV Girl", img: "main/tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "Dreamy indie pop with nostalgic, heart-touching melodies." },
                     { name: "Billie Eilish", img: "public/billie.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4oee5QSbfqLN", about: "Soft, whispery vocals with deep emotional storytelling." },
                     { name: "Beach House", img: "public/beachhouse.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4DemSGzmCZ29", about: "Ethereal dream pop that transports you to another world." }
                 ],
                 focus: [
-                    { name: "Lofi Girl", img: "public/lofigirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4yVfD4M4LwFh", about: "Relaxing beats perfect for studying and deep focus." },
+                    { name: "Lofi Girl", img: "main/lofigirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4yVfD4M4LwFh", about: "Relaxing beats perfect for studying and deep focus." },
                     { name: "Hans Zimmer", img: "public/hanszimmer.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4sbexosKtF5C", about: "Legendary composer behind cinematic, powerful soundtracks." },
                     { name: "Kordhell", img: "public/kordhell.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4yleuWstyUDt", about: "Dark phonk beats with a hypnotic and energetic vibe." }
                 ],
                 angry: [
-                    { name: "Eminem", img: "public/eminem.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4uduXaJcMi49", about: "Hard-hitting rap with raw emotion and unmatched flow." },
+                    { name: "Eminem", img: "main/eminem.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4uduXaJcMi49", about: "Hard-hitting rap with raw emotion and unmatched flow." },
                     { name: "Slipknot", img: "public/slipknot.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4m433mhB66fa", about: "Heavy metal at its finest—intense, chaotic, and powerful." },
                     { name: "Bring Me The Horizon", img: "public/bmth.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4jXFV0KMR1gU", about: "A mix of metalcore and alternative rock with deep emotions." }
                 ]
