--- a/artists.html
+++ b/artists.html
@@ -33,13 +33,13 @@
         document.addEventListener("DOMContentLoaded", function () {
             const moods = {
                 happy: [
-                    { name: "BTS", img: "main/bts.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "K-pop sensations known for uplifting beats and inspiring lyrics." }, 
+                    { name: "BTS", img: "bts.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "K-pop sensations known for uplifting beats and inspiring lyrics." }, 
                     { name: "Pitbull", img: "pitbull.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4r0nzNspuQFK", about: "The king of party anthems, bringing energy to every track." },
                     { name: "BBNO$", img: "bbno.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4m14w1NfDKCh", about: "A rapper with fun, quirky lyrics and infectious beats." }
                 ],
 
                 sad: [
-                    { name: "TV Girl", img: "main/tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "Dreamy indie pop with nostalgic, heart-touching melodies." },
+                    { name: "TV Girl", img: "tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "Dreamy indie pop with nostalgic, heart-touching melodies." },
                     { name: "Billie Eilish", img: "billie.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4oee5QSbfqLN", about: "Soft, whispery vocals with deep emotional storytelling." },
                     { name: "Beach House", img: "beachhouse.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4DemSGzmCZ29", about: "Ethereal dream pop that transports you to another world." }
                 ],
