--- a/artists.html
+++ b/artists.html
@@ -33,7 +33,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             const moods = {
                 happy: [
-                    { name: "BTS", img:"bts.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "K-pop sensations known for uplifting beats and inspiring lyrics." }, 
+                    { name: "BTS", img:"bts.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "BTS (Korean: 방탄소년단; RR: Bangtan Sonyeondan; lit. Bulletproof Boy Scouts), also known as the Bangtan Boys, is a South Korean boy band formed in 2010. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and Jung Kook" }, 
                     { name: "Pitbull", img: "pitbull.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4r0nzNspuQFK", about: "The king of party anthems, bringing energy to every track." },
                     { name: "BBNO$", img: "bbno.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4m14w1NfDKCh", about: "A rapper with fun, quirky lyrics and infectious beats." }
                 ],
