--- a/artists.html
+++ b/artists.html
@@ -33,13 +33,13 @@
         document.addEventListener("DOMContentLoaded", function () {
             const moods = {
                 happy: [
-                    { name: "BTS", img:"bts.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "BTS (Korean: 방탄소년단), is a South Korean boy band formed in 2010. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and Jung Kook" }, 
-                    { name: "Pitbull", img: "pitbull.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4r0nzNspuQFK", about: "The king of party anthems, bringing energy to every track." },
-                    { name: "BBNO$", img: "bbno.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4m14w1NfDKCh", about: "A rapper with fun, quirky lyrics and infectious beats." }
+                    { name: "BTS", img:"bts.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4rlkYj6ItCDn", about: "BTS (방탄소년단), is a South Korean boy band debuted in 2013. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and Jung Kook." }, 
+                    { name: "Pitbull", img: "pitbull.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4r0nzNspuQFK", about: "Armando Christian Pérez, better known as Pitbull, is an American rapper and singer. He began his career in the early 2000s" },
+                    { name: "BBNO$", img: "bbno.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4m14w1NfDKCh", about: "Alexander Leon Gumuchian, known professionally as bbno$, is a Canadian rapper and singer." }
                 ],
 
                 sad: [
-                    { name: "TV Girl", img: "tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "Dreamy indie pop with nostalgic, heart-touching melodies." },
+                    { name: "TV Girl", img: "tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "TV Girl is an American indie pop band from San Diego. They have a vocalist Brad Petering, a drummer Jason Wyman, and a keyboardist Wyatt Harmon. The band released its first albums in 2010" },
                     { name: "Billie Eilish", img: "billie.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4oee5QSbfqLN", about: "Soft, whispery vocals with deep emotional storytelling." },
                     { name: "Beach House", img: "beachhouse.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4DemSGzmCZ29", about: "Ethereal dream pop that transports you to another world." }
                 ],
