--- a/artists.html
+++ b/artists.html
@@ -40,18 +40,18 @@
 
                 sad: [
                     { name: "TV Girl", img: "tvgirl.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4lFGdRLY5idQ", about: "TV Girl is an American indie pop band from San Diego. They have a vocalist Brad Petering, a drummer Jason Wyman, and a keyboardist Wyatt Harmon. The band released its first albums in 2010" },
-                    { name: "Billie Eilish", img: "billie.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4oee5QSbfqLN", about: "Soft, whispery vocals with deep emotional storytelling." },
-                    { name: "Beach House", img: "beachhouse.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4DemSGzmCZ29", about: "Ethereal dream pop that transports you to another world." }
+                    { name: "Billie Eilish", img: "billie.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4oee5QSbfqLN", about: "Billie Eilish Pirate Baird O'Connell is an American singer-songwriter and musician. She has won nine Grammy Awards so far." },
+                    { name: "Beach House", img: "beachhouse.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4DemSGzmCZ29", about: "Beach House is an American dream pop band formed in Baltimore in 2004 by current members Victoria Legrand and Alex Scally.Their work is characterized by a hypnotic dream pop style" }
                 ],
                 focus: [
-                    { name: "Lofi Girl", img: "lofigirl.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4yVfD4M4LwFh", about: "Relaxing beats perfect for studying and deep focus." },
-                    { name: "Hans Zimmer", img: "hanszimmer.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4sbexosKtF5C", about: "Legendary composer behind cinematic, powerful soundtracks." },
-                    { name: "Kordhell", img: "kordhell.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4yleuWstyUDt", about: "Dark phonk beats with a hypnotic and energetic vibe." }
+                    { name: "Lofi Girl", img: "lofigirl.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4yVfD4M4LwFh", about: "Lofi Girl originally is a French YouTube channel livestreams of lo-fi hip hop music 24/7h which provides relaxing beats perfect for studying and deep focus." },
+                    { name: "Hans Zimmer", img: "hanszimmer.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4sbexosKtF5C", about: "Hans Florian Zimmer is a German film  music composer. He is behind many cinematic, powerful soundtracks." },
+                    { name: "Kordhell", img: "kordhell.jpeg", link: "https://open.spotify.com/playlist/37i9dQZF1E4yleuWstyUDt", about: "Kordhell makes dark phonk beats with a hypnotic and energetic vibe." }
                 ],
                 angry: [
-                    { name: "Eminem", img: "eminem.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4uduXaJcMi49", about: "Hard-hitting rap with raw emotion and unmatched flow." },
-                    { name: "Slipknot", img: "slipknot.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4m433mhB66fa", about: "Heavy metal at its finest—intense, chaotic, and powerful." },
-                    { name: "Bring Me The Horizon", img: "bmth.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4jXFV0KMR1gU", about: "A mix of metalcore and alternative rock with deep emotions." }
+                    { name: "Eminem", img: "eminem.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4uduXaJcMi49", about: "Marshall Bruce Mathers III, known professionally as Eminem, is an American rapper, songwriter, and record producer. He is referred as one of the greatest and most influential rappers of all time." },
+                    { name: "Slipknot", img: "slipknot.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4m433mhB66fa", about: "Slipknot is an American heavy metal band formed in Des Moines, in 1995 by Shawn Crahan, Anders Colsefni, and Paul Gray." },
+                    { name: "Bring Me The Horizon", img: "bmth.jpeg" , link: "https://open.spotify.com/playlist/37i9dQZF1E4jXFV0KMR1gU", about: "Bring Me the Horizon are a British rock band, formed in Sheffield, England in 2004. The group currently consists of lead vocalist Oli Sykes, drummer Matt Nicholls, guitarist Lee Malia and bassist Matt Kean. " }
                 ]
             };
 
