Update artists.html for random radio

--- a/artists.html
+++ b/artists.html
@@ -9,6 +9,11 @@
 
 <script src="script.js"></script>
 
+    <div style="margin: 30px;">
+    <button id="radio-btn" class="mood-btn">🎵 MoodZ Radio</button>
+</div>
+
+
 <body>
 
     <nav>
