--- a/artists.html
+++ b/artists.html
@@ -9,7 +9,7 @@
 
 <script src="script.js"></script>
 
-    <div style="margin: 30px;">
+  <div style="text-align: center; margin-top: 30px;">
     <button id="radio-btn" class="mood-btn">🎵 MoodZ Radio</button>
 </div>
 
